Closed Bug 1735612 Opened 3 years ago Closed 3 years ago

Perma macOS ESR91 gfx/tests/crashtests/1331683.html | application crashed [@ gfxMacFont::gfxMacFont(RefPtr<mozilla::gfx::UnscaledFontMac> const&, MacOSFontEntry*, gfxFontStyle const*)] after Assertion failure: aVariationCount > 0, at ScaledFontMac.cpp:667

Categories

(Core :: Graphics: Text, defect)

defect

Tracking

()

RESOLVED FIXED
95 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- fixed
firefox93 --- wontfix
firefox94 --- fixed
firefox95 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: jfkthame)

Details

(Keywords: assertion, crash, intermittent-failure)

Crash Data

Attachments

(1 file)

Not specific to ESR91; this also reproduces on trunk if the shared font list is disabled.

It happens because the Skia font has quirky variation-axis scales that we determine don't map to CSS property values, and we end up with an empty array of variations; so we shouldn't assert there, just quietly return null and let the caller fall back to using the base font instance.

Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Pushed by jkew@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/96bc544cdb62
Don't assert if CreateCGFontWithVariations is called with no variations; just return null and let the caller handle fallback. r=lsalzman

Comment on attachment 9245944 [details]
Bug 1735612 - Don't assert if CreateCGFontWithVariations is called with no variations; just return null and let the caller handle fallback. r?lsalzman

ESR Uplift Approval Request

  • If this is not a sec:{high,crit} bug, please state case for ESR consideration: Perma-failing crashtest on CI
  • User impact if declined:
  • Fix Landed on Version: 95
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Removes over-zealous assertion that was triggered in an edge-case. Just fallback instead.
  • String or UUID changes made by this patch:
Attachment #9245944 - Flags: approval-mozilla-esr91?

Comment on attachment 9245944 [details]
Bug 1735612 - Don't assert if CreateCGFontWithVariations is called with no variations; just return null and let the caller handle fallback. r?lsalzman

Approved for 91.3esr, thanks.

Attachment #9245944 - Flags: approval-mozilla-esr91? → approval-mozilla-esr91+
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 95 Branch

Comment on attachment 9245944 [details]
Bug 1735612 - Don't assert if CreateCGFontWithVariations is called with no variations; just return null and let the caller handle fallback. r?lsalzman

We need this on 94 for bug 1732629 to graft cleanly.

Attachment #9245944 - Flags: approval-mozilla-release?

The patch landed in nightly and beta is affected.
:jfkthame, is this bug important enough to require an uplift?
If not please set status_beta to wontfix.

For more information, please visit auto_nag documentation.

Flags: needinfo?(jfkthame)

Comment on attachment 9245944 [details]
Bug 1735612 - Don't assert if CreateCGFontWithVariations is called with no variations; just return null and let the caller handle fallback. r?lsalzman

Needed for bug 1732629, approved for 94.0rc2.

Flags: needinfo?(jfkthame)
Attachment #9245944 - Flags: approval-mozilla-release? → approval-mozilla-release+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: