Bug 1735612 - Don't assert if CreateCGFontWithVariations is called with no variations; just return null and let the caller handle fallback. r=lsalzman, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D128489